--- a/build_X86/Demo/IDCR_Demo.vcxproj
+++ b/build_X86/Demo/IDCR_Demo.vcxproj
@@ -12,6 +12,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\Demo.cpp" />
+    <ClCompile Include="..\..\src\MC_LoadTools.cpp" />
+    <ClCompile Include="..\..\src\MC_PixelMap.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\src\MC_LoadTools.h" />
+    <ClInclude Include="..\..\src\MC_PixelMap.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{6806BDA6-B198-4289-B4A3-11D0E494BF87}</ProjectGuid>
@@ -53,7 +59,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;MC_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
